fix: add key to fragment, fix double scroll on w3name page

--- a/packages/website/pages/index.scss
+++ b/packages/website/pages/index.scss
@@ -2,9 +2,6 @@
 
 // ///////////////////////////////////////////////////// General [Page Sections]
 // -----------------------------------------------------------------------------
-#marketing-site {
-  overflow: hidden;
-}
 
 .page-index {
   position: relative;
