--- a/packages/website/pages/products/w3name/index.scss
+++ b/packages/website/pages/products/w3name/index.scss
@@ -1,10 +1,12 @@
 @use 'sass:math';
 
+.page-w3name {
+  position: relative;
+}
+
 #product_hero-header {
   text-align: center;
   padding: 6rem 0 3rem;
-  position: relative;
-  z-index: 0;
 
   @include mini {
     text-align: left;
@@ -84,7 +86,6 @@
 
   .gradient-background-component {
     top: -10rem;
-    z-index: 0;
     height: calc(100% + 20rem);
     filter: blur(50px);
   }
